objects/ssot__InventoryRequestItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationLocationId__c</fullName>
        <label>Destination Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Inventory Request Item Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequestId__c</fullName>
        <label>Inventory Request</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequestItemNumber__c</fullName>
        <label>Inventory Request Item Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequestItemStatus__c</fullName>
        <label>Inventory Request Item Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NeedByDateTime__c</fullName>
        <label>Need By DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUOM__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedQuantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToAddressId__c</fullName>
        <label>Ship To Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToGeocodeAccuracyType__c</fullName>
        <label>Ship To Geocode Accuracy Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToLatitude__c</fullName>
        <label>Ship To Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShipToLongitude__c</fullName>
        <label>Ship To Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentType__c</fullName>
        <label>Shipment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceLocationId__c</fullName>
        <label>Source Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderId__c</fullName>
        <label>Work Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderItemId__c</fullName>
        <label>Work Order Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432558203_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequestItem_SourceLocationI_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>InventoryRequestItem_SourceLocationI_rel</relationshipLabel>
        <relationshipName>rel_1710432558203_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432560525_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequestItem_InventoryReques_rel</label>
        <referenceTo>ssot__InventoryRequest__dlm</referenceTo>
        <relationshipLabel>InventoryRequestItem_InventoryReques_rel</relationshipLabel>
        <relationshipName>rel_1710432560525_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432562965_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryRequestItem_ShipToAddressId_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>InventoryRequestItem_ShipToAddressId_rel</relationshipLabel>
        <relationshipName>rel_1710432562965_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>